Parse JSON from request. Async retrieve 'show', includes show times.

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Read it and weep.
+WIP: 
+* Grab showtimes for radio shows from a radio station
+* Grab show track/artist information
+* Set 'show' playlists on Tidal/G-Music
+
+Later:
+* automatic show/playlist setup on a schedule
+* front end
+* set up new radio shows/stations
